# libbladeui

./: .gitignore  Makefile.am  NEWS  README  THANKS  configure.ac.in
docs/: Makefile.am  libbladeui-docs.xml  libbladeui-sections.txt  libbladeui.types
glade/: Makefile.am  libbladeui-2.xml.in  libbladeui-glade.c  libbladeui.xml.in
glade/icons/16x16/: Makefile.am
glade/icons/22x22/: Makefile.am
libbladeui/: Makefile.am  abicheck.sh  libbladeui-1.pc.in  libbladeui-2.deps  libbladeui-2.pc.in  libbladeui-config.c  libbladeui-config.h.in  libbladeui-dialog-ui.ui  libbladeui-private.h  libbladeui.gresource.xml  libbladeui.h  libbladeui.symbols  make-libbladeui-alias.pl  xfce-dialogs.c  xfce-dialogs.h  xfce-gdk-extensions.c  xfce-gdk-extensions.h  xfce-gtk-extensions.c  xfce-gtk-extensions.h  xfce-heading.c  xfce-heading.h  xfce-sm-client.c  xfce-sm-client.h  xfce-spawn.c  xfce-spawn.h  xfce-titled-dialog.c  xfce-titled-dialog.h
libxfce4kbd-private/: Makefile.am  libxfce4kbd-private-2.pc.in  libxfce4kbd-private-3.pc.in  xfce-shortcut-dialog.c  xfce-shortcuts-grabber.c  xfce-shortcuts-provider.c  xfce-shortcuts-xfwm4.c  xfce-shortcuts.c  xfce-shortcuts.h  xfce4-keyboard-shortcuts.xml
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  oc.po  (+23 more)
python-example/: test-introspection.py
tests/: Makefile.am  test-ui.c
xfce4-about/: Makefile.am  contributors.h  main.c  translators.h  xfce4-about-dialog.glade
